# job-hunter-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflow/: main.yml
.github/workflows/: lint.yml  main.yml  tests.yml
docker/: Dockerfile
docs/: architecture.py
iac/: Makefile  README.md
iac/environments/: common_vars.hcl  root.hcl
iac/environments/component_vars/: compute.hcl  iam.hcl  logging.hcl  networking.hcl  registry.hcl  security-env.hcl  storage.hcl  task_definition_environment.json
iac/environments/develop/: environment.hcl
iac/environments/global/cicd/: terragrunt.hcl
iac/environments/global/registry/: terragrunt.hcl
iac/environments/global/security/: terragrunt.hcl
iac/environments/global/ses/: terragrunt.hcl
iac/environments/prod/: environment.hcl
iac/environments/prod/compute/: terragrunt.hcl
iac/environments/prod/networking/: terragrunt.hcl
iac/environments/prod/registry/: terragrunt.hcl
iac/environments/prod/storage/: terragrunt.hcl
iac/environments/production/compute/: terragrunt.hcl
iac/environments/production/iam/: terragrunt.hcl
iac/environments/staging/: environment.hcl
iac/modules/cicd/: main.tf  outputs.tf
iac/modules/compute/: ecs.tf  main.tf  parameters.tf  scheduler.tf  task_definition.tf  variables.tf
iac/modules/iam/: main.tf  outputs.tf
iac/modules/networking/: main.tf  outputs.tf  variables.tf
iac/modules/security/: main.tf  outputs.tf  variables.tf
iac/modules/security-env/: main.tf
iac/modules/security-global/: main.tf  variables.tf
iac/modules/ses/: main.tf  outputs.tf  variables.tf
notebooks/: automate_search.ipynb
src/: ai_analyzer.py  config.py  job_search.py  logging.conf  mailer.py  remoteco.py  remoteok.py  remotive.py  search_config.template.yaml  template.env  worknomads.py  wwr.py
src/data/: prompt.txt
src/scrapers/: base_scraper.py  indeed.py  remoteok.py  remotive.py  scraper_factory.py  trulyremote.py  workingnomads.py  wwr.py
src/scrappers/: base_scraper.py  indeed.py  remoteco.py  remoteok.py  remotive.py  scraper_factory.py  trulyremote.py  tw104.py  workingnomads.py  worknomads.py  wwr.py
tests/: conftest.py  test_ai_analyzer.py  test_base_scraper.py  test_job_search.py  test_remoteok.py  test_remotive.py  test_wwr.py
tests/unit/: conftest.py  test_ai_analyzer.py  test_base_scraper.py  test_config.py  test_job_search.py  test_remoteok.py  test_remotive.py  test_trulyremote.py  test_tw104.py  test_workingnomads.py  test_wwr.py
(+8 files in other folders)
