[tool.poetry]
name = "job-hunter-bot"
version = "0.1.0"
description = "Bot to fetch opened remote positions"
authors = ["Guillaume Martin"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
beautifulsoup4 = "4.13.4"
boto3 = "1.39.8"
python-dotenv = "1.1.1"
lxml = "6.0.0"
requests = "2.32.4"
selenium = "4.34.2"
urllib3 = "2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
ruff = "^0.15.5"
mypy = "^1.19.1"
boto3-stubs = "^1.42.67"
botocore-stubs = "^1.42.41"
types-requests = "^2.32.4.20260107"
pre-commit = "^4.5.1"
detect-secrets = "^1.5.0"

[tool.poetry.group.test.dependencies]
pytest = "8.4.1"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
